--- a/index.html
+++ b/index.html
@@ -72,5 +72,17 @@
         </li>
       </ul>
     </section>
+
+       <!-- === JS FILE ===-->
+       <script type="text/javascript">
+        function imgSlider(anything){
+          document.querySelector('.starbucks').src = anything;
+        }
+  
+        function changeCircleColor(color){
+          const circle = document.querySelector('.circle');
+          circle.style.background = color;
+        }
+      </script>
   </body>
 </html>
